[package]
edition = "2021"
name = "lapce-prettier"
version = "0.0.0"
resolver = "2"

[target.'cfg(target_os = "wasi")'.dependencies]
# plugin deps

# for unpacking zip
# zip = { version = "0.6", default-features = false, features = ["deflate"] }

# for unpacking tar/gz
# flate2 = { version = "1.0" }

# default deps for all lapce plugins
anyhow = "1.0"
serde_json = "1.0"
lapce-plugin = { path = "../lapce-plugin-rust" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
jsonrpc-lite = "0.6.0"
once_cell = "1.17.0"
serde = "1.0.152"
